Implemented galleries navigation

--- a/galeria/bodegones.html
+++ b/galeria/bodegones.html
@@ -187,6 +187,22 @@
       };
     </script>
 
+
+
+    <div style="width: 100%; text-align: center">
+      <div class="next-prev-container">
+        <button class="disabled">
+          <i class="fa fa-chevron-left"></i>&nbsp;ANTERIOR
+        </button>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <a href="interiores.html" target="_self">
+          <button>
+            SIGUIENTE&nbsp;<i class="fa fa-chevron-right"></i>
+          </button>
+        </a>
+      </div>
+    </div>
+
   </div>
 
 </div>
