--- a/galeria/geometria.html
+++ b/galeria/geometria.html
@@ -186,6 +186,22 @@
       };
     </script>
 
+    <div style="width: 100%; text-align: center">
+      <div class="next-prev-container">
+        <a href="texturas.html" target="_self">
+          <button>
+            <i class="fa fa-chevron-left"></i>&nbsp;ANTERIOR
+          </button>
+        </a>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <a href="grandes_construcciones.html" target="_self">
+          <button>
+            SIGUIENTE&nbsp;<i class="fa fa-chevron-right"></i>
+          </button>
+        </a>
+      </div>
+    </div>
+
   </div>
 
 </div>
