--- a/galeria/aerea.html
+++ b/galeria/aerea.html
@@ -183,6 +183,20 @@
         };
       </script>
 
+      <div style="width: 100%; text-align: center">
+        <div class="next-prev-container">
+          <a href="grandes_construcciones.html" target="_self">
+            <button>
+              <i class="fa fa-chevron-left"></i>&nbsp;ANTERIOR
+            </button>
+          </a>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
+          <button class="disabled">
+            SIGUIENTE&nbsp;<i class="fa fa-chevron-right"></i>
+          </button>
+        </div>
+      </div>
+
     </div>
 
   </div>
