--- a/galeria/texturas.html
+++ b/galeria/texturas.html
@@ -179,6 +179,23 @@
       };
     </script>
 
+    <div style="width: 100%; text-align: center">
+      <div class="next-prev-container">
+        <a href="graffitis.html" target="_self">
+          <button>
+            <i class="fa fa-chevron-left"></i>&nbsp;ANTERIOR
+          </button>
+        </a>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <a href="geometria.html" target="_self">
+          <button>
+            SIGUIENTE&nbsp;<i class="fa fa-chevron-right"></i>
+          </button>
+        </a>
+      </div>
+    </div>
+
+
   </div>
 
 </div>
