--- a/fotolibro.html
+++ b/fotolibro.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="...">
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/libro.css">
+    <link rel="stylesheet" href="css/fotolibro.css">
     <link rel="icon" href="/assets/favicon-light.ico" media="(prefers-color-scheme: light)">
     <link rel="icon" href="/assets/favicon-dark.ico" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -86,9 +86,7 @@
         <div class="body-section-padding margin-top">
             <p id="turn-device-message"><i class="fa fa-rotate-left"></i>&nbsp;Rota tu dispositivo para una mejor experiencia.</p>
             <div class="book-container margin-top">
-
-                <iframe style="width:100%;height:100%" src="https://online.fliphtml5.com/yoelk/nknz/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
-
+                <iframe id="book" style="width:100%;height:100%" src="https://online.fliphtml5.com/yoelk/okwj/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
             </div>
             <div class="hr-container">
                 <hr>
