Updated naturaleza names. Fixed "keep" images on galleries.

--- a/fotolibro.html
+++ b/fotolibro.html
@@ -5,13 +5,13 @@
 <!-- TODO: EDITAR -->
 <head>
     <!-- TODO: EDITAR -->
-    <title>LIBRO / MANUEL ESTEVEZ MURADO</title>
+    <title>FOTOLIBRO / MANUEL ESTEVEZ MURADO</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Joaquín Solla Vázquez, Manuel Estévez Murado">
     <!-- TODO: EDITAR -->
-    <meta name="description" content="Manuel Estévez Murado: Libro">
+    <meta name="description" content="Manuel Estévez Murado: Fotolibro">
     <!-- TODO: EDITAR -->
     <meta name="keywords" content="...">
 
