--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                 </div>
 
                 <div class="index-galleries-section">
-                    <a class="index-galleries-section-link" href="galeria/naturaleza_invasora.html">
-                        <div class="index-galleries-section-image" style="background-image: url('assets/thumbnail/naturaleza_invasora/DSCF3483.webp')">
+                    <a class="index-galleries-section-link" href="galeria/naturaleza.html">
+                        <div class="index-galleries-section-image" style="background-image: url('assets/thumbnail/naturaleza/DSCF3483.webp')">
                         </div>
                         <p class="index-galleries-section-text no-select">
                             Naturaleza invasora
