--- a/galeria/interiores.html
+++ b/galeria/interiores.html
@@ -165,16 +165,20 @@
         img.alt = "";
         img.loading = "lazy";
 
-        if (img.dataset.src !== "keep") img.onclick = (function(index) {
-          return function() {
-            let modal = document.getElementById("modal");
-            let modalImg = document.getElementById("modalImage");
-            let captionText = document.getElementById("caption");
-            modal.style.display = "block";
-            modalImg.src = originalImages[index];
-            captionText.innerHTML = img.alt;
-          };
-        })(i);
+        if (img.dataset.src !== "keep"){
+          img.onclick = (function(index) {
+            return function() {
+              let modal = document.getElementById("modal");
+              let modalImg = document.getElementById("modalImage");
+              let captionText = document.getElementById("caption");
+              modal.style.display = "block";
+              modalImg.src = originalImages[index];
+              captionText.innerHTML = img.alt;
+            };
+          })(i);
+        } else {
+          img.style.opacity = "0";
+        }
 
         const observer = new IntersectionObserver((entries) => {
           entries.forEach((entry) => {
@@ -206,7 +210,7 @@
           </button>
         </a>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
-        <a href="naturaleza_invasora.html" target="_self">
+        <a href="naturaleza.html" target="_self">
           <button>
             SIGUIENTE&nbsp;<i class="fa fa-chevron-right"></i>
           </button>
