Updated naturaleza names.

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="index-galleries-section-image" style="background-image: url('assets/thumbnail/naturaleza/DSCF3483.webp')">
                         </div>
                         <p class="index-galleries-section-text no-select">
-                            Naturaleza invasora
+                            Naturaleza
                         </p>
                     </a>
                 </div>
