Implemented galleries title navigation

--- a/galeria/graffitis.html
+++ b/galeria/graffitis.html
@@ -84,7 +84,46 @@
 
   <div class="body-section-padding margin-top">
 
-    <h1 style="text-align: center; margin: 30px 0 30px 0">Graffitis</h1>
+    <div class="title-navigation-container">
+      <p class="title-navigation-link">
+        <a href="bodegones.html" target="_self">
+          Bodegones
+        </a>
+      </p>
+      <p class="title-navigation-link">
+        <a href="interiores.html" target="_self">
+          Interiores
+        </a>
+      </p>
+      <p class="title-navigation-link">
+        <a href="naturaleza.html" target="_self">
+          Naturaleza
+        </a>
+      </p>
+      <p class="title-navigation-current">
+        Graffitis
+      </p>
+      <p class="title-navigation-link">
+        <a href="texturas.html" target="_self">
+          Texturas
+        </a>
+      </p>
+      <p class="title-navigation-link">
+        <a href="geometria.html" target="_self">
+          Geometría
+        </a>
+      </p>
+      <p class="title-navigation-link">
+        <a href="grandes_construcciones.html" target="_self">
+          Grandes&nbsp;construcciones
+        </a>
+      </p>
+      <p class="title-navigation-link">
+        <a href="aerea.html" target="_self">
+          Aérea
+        </a>
+      </p>
+    </div>
 
     <div id="gallery-wrap" class="gallery-wrap"></div>
     <div id="modal" class="modal">
