--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         }
                     }
                 </script>
-                <a style="cursor: pointer" onclick="scrollToIntro()">
+                <a id="scroll-button" style="cursor: pointer" onclick="scrollToIntro()">
                     <p style="user-select: none; font-size: 1.25rem; font-style: italic">Desliza para ver las fotografías<br>
                         <i class="fa fa-angle-double-down" style="animation: bounce 2.5s infinite;"></i>
                     </p>
