--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="index-home body-section">
 
             <video id="bg-video" autoplay loop muted>
-                <source src="assets/drone_view_1080_16-9.mp4" type="video/webm">
+                <source src="assets/drone_view_1080_16-9.mp4" type="video/mp4">
             </video>
             <script>
                 function centerVideo() {
