Updated project title

--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -5,7 +5,7 @@
 <!-- TODO: EDITAR -->
 <head>
   <!-- TODO: EDITAR -->
-  <title>UBICACIONES / MANUEL ESTEVEZ MURADO</title>
+  <title>UBICACIONES / EL ARTE DE LA RUINA</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +47,7 @@
       <header class="header-expanded body-section">
         <div class="header-title">
           <a href="index.html">
-            <h1>Título del TFG aquí</h1>
+            <h1>El arte de la ruina</h1>
             <p>Manuel Estévez Murado</p>
           </a>
         </div>
@@ -68,7 +68,7 @@
       <header class="header-collapsed body-section">
         <div class="header-title">
           <a href="index.html">
-            <h1>Título del TFG aquí</h1>
+            <h1>El arte de la ruina</h1>
             <p>Manuel Estévez Murado</p>
           </a>
         </div>
