--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- TODO: EDITAR -->
 <head>
     <!-- TODO: EDITAR -->
-    <title>MANUEL ESTEVEZ MURADO</title>
+    <title>EL ARTE DE LA RUINA</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -88,7 +88,7 @@
                 <header class="header-expanded body-section">
                     <div class="header-title">
                         <a href="index.html">
-                            <h1>Título del TFG aquí</h1>
+                            <h1>El arte de la ruina</h1>
                             <p>Manuel Estévez Murado</p>
                         </a>
                     </div>
@@ -109,7 +109,7 @@
                 <header class="header-collapsed body-section">
                     <div class="header-title">
                         <a href="index.html">
-                            <h1>Título del TFG aquí</h1>
+                            <h1>El arte de la ruina</h1>
                             <p>Manuel Estévez Murado</p>
                         </a>
                     </div>
