--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
             <video id="bg-video" autoplay loop muted>
                 <source src="assets/drone_view_1080_16-9.mp4" type="video/mp4">
+                <source src="assets/drone_view_1080_16-9.mov" type="video/mov">
             </video>
             <script>
                 function centerVideo() {
