HotFix galleries script

--- a/galeria/aerea.html
+++ b/galeria/aerea.html
@@ -183,22 +183,34 @@
         const galleryWrap = document.getElementById("gallery-wrap");
 
         for (let i = 0; i < thumbnailImages.length; i++) {
-          let img = document.createElement("img");
-          img.dataset.src = thumbnailImages[i];
-          img.className = "gallery-wrap-photo";
-          img.alt = "";
-          img.loading = "lazy";
 
-          img.onclick = (function(index) {
-            return function() {
-              let modal = document.getElementById("modal");
-              let modalImg = document.getElementById("modalImage");
-              let captionText = document.getElementById("caption");
-              modal.style.display = "block";
-              modalImg.src = originalImages[index];
-              captionText.innerHTML = img.alt;
-            };
-          })(i);
+          let child = document.createElement("div");
+
+          if (thumbnailImages[i] !== "keep"){
+            child = document.createElement("img");
+            child.dataset.src = thumbnailImages[i];
+            child.className = "gallery-wrap-photo";
+            child.alt = "";
+            child.loading = "lazy";
+
+            child.onclick = (function(index) {
+              return function() {
+                let modal = document.getElementById("modal");
+                let modalImg = document.getElementById("modalImage");
+                let captionText = document.getElementById("caption");
+                modal.style.display = "block";
+                modalImg.src = originalImages[index];
+                captionText.innerHTML = child.alt;
+              };
+            })(i);
+          } else {
+            child.style.height = "0";
+            child.style.width = "33%";
+            child.style.flex = "0 0 33%";
+            child.style.paddingLeft = "10px";
+            child.style.paddingRight = "10px";
+            child.style.boxSizing = "border-box";
+          }
 
           const observer = new IntersectionObserver((entries) => {
             entries.forEach((entry) => {
@@ -211,8 +223,8 @@
             });
           });
 
-          galleryWrap.appendChild(img);
-          observer.observe(img);
+          galleryWrap.appendChild(child);
+          observer.observe(child);
         }
 
         const modal = document.getElementById("modal");
