Added shop link

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <p><a href="fotolibro.html">FOTOLIBRO</a></p>
             <p><a href="informacion.html">INFORMACIÓN</a></p>
             <p><a href="ubicaciones.html">UBICACIONES</a></p>
+            <p><a href="linkToTienda" target="_blank">TIENDA</a></p>
             <p><a href="contacto.html">CONTACTO</a></p>
         </div>
         <div></div>
@@ -116,6 +117,8 @@
                         <a href="informacion.html">INFORMACIÓN</a>
                         &nbsp;
                         <a href="ubicaciones.html">UBICACIONES</a>
+                        &nbsp;
+                        <a href="linkToTienda" target="_blank">TIENDA</a>
                         &nbsp;
                         <a href="contacto.html">CONTACTO</a>
                     </p>
