--- a/fotolibro.html
+++ b/fotolibro.html
@@ -40,6 +40,7 @@
                 <p><a href="fotolibro.html">FOTOLIBRO</a></p>
                 <p><a href="informacion.html">INFORMACIÓN</a></p>
                 <p><a href="ubicaciones.html">UBICACIONES</a></p>
+                <p><a href="linkToTienda" target="_blank">TIENDA</a></p>
                 <p><a href="contacto.html">CONTACTO</a></p>
             </div>
             <div></div>
@@ -61,6 +62,8 @@
                         <a href="informacion.html">INFORMACIÓN</a>
                         &nbsp;
                         <a href="ubicaciones.html">UBICACIONES</a>
+                        &nbsp;
+                        <a href="linkToTienda" target="_blank">TIENDA</a>
                         &nbsp;
                         <a href="contacto.html">CONTACTO</a>
                     </p>
