--- a/galeria/naturaleza.html
+++ b/galeria/naturaleza.html
@@ -39,7 +39,7 @@
       <p><a href="../fotolibro.html">FOTOLIBRO</a></p>
       <p><a href="../informacion.html">INFORMACIÓN</a></p>
       <p><a href="../ubicaciones.html">UBICACIONES</a></p>
-      <p><a href="linkToTienda" target="_blank">TIENDA</a></p>
+      <p><a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a></p>
       <p><a href="../contacto.html">CONTACTO</a></p>
     </div>
     <div></div>
@@ -62,7 +62,7 @@
           &nbsp;
           <a href="../ubicaciones.html">UBICACIONES</a>
           &nbsp;
-          <a href="linkToTienda" target="_blank">TIENDA</a>
+          <a href="https://www.etsy.com/es/shop/elartedelaruina?ref=seller-platform-mcnav" target="_blank">TIENDA</a>
           &nbsp;
           <a href="../contacto.html">CONTACTO</a>
         </p>
