Updated name geometria to geometrica

--- a/galeria/aerea.html
+++ b/galeria/aerea.html
@@ -114,8 +114,8 @@
           </a>
         </p>
         <p class="title-navigation-link">
-          <a href="geometria.html" target="_self">
-            Geometría
+          <a href="geometrica.html" target="_self">
+            Geométrica
           </a>
         </p>
         <p class="title-navigation-link">
