--- a/galeria/geometrica.html
+++ b/galeria/geometrica.html
@@ -5,13 +5,13 @@
 <!-- TODO: EDITAR -->
 <head>
   <!-- TODO: EDITAR -->
-  <title>GEOMETRÍA / FOTOGRAFÍAS / EL ARTE DE LA RUINA</title>
+  <title>GEOMÉTRICA / FOTOGRAFÍAS / EL ARTE DE LA RUINA</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Joaquín Solla Vázquez, Manuel Estévez Murado">
   <!-- TODO: EDITAR -->
-  <meta name="description" content="Manuel Estévez Murado: Fotografías: Geometría">
+  <meta name="description" content="Manuel Estévez Murado: Fotografías: Geométrica">
   <!-- TODO: EDITAR -->
   <meta name="keywords" content="...">
 
@@ -114,7 +114,7 @@
         </a>
       </p>
       <p class="title-navigation-current">
-        Geometría
+        Geométrica
       </p>
       <p class="title-navigation-link">
         <a href="grandes_construcciones.html" target="_self">
@@ -136,8 +136,8 @@
     </div>
 
     <script>
-      const originalRoute = "../assets/original/geometria/";
-      const thumbnailRoute = "../assets/thumbnail/geometria/";
+      const originalRoute = "../assets/original/geometrica/";
+      const thumbnailRoute = "../assets/thumbnail/geometrica/";
 
       let originalImages = [
         originalRoute + "DSCF0378-HDR.webp",
