--- a/galeria/grandes_construcciones.html
+++ b/galeria/grandes_construcciones.html
@@ -114,8 +114,8 @@
         </a>
       </p>
       <p class="title-navigation-link">
-        <a href="geometria.html" target="_self">
-          Geometría
+        <a href="geometrica.html" target="_self">
+          Geométrica
         </a>
       </p>
       <p class="title-navigation-current">
@@ -229,7 +229,7 @@
 
     <div style="width: 100%; text-align: center">
       <div class="next-prev-container">
-        <a href="geometria.html" target="_self">
+        <a href="geometrica.html" target="_self">
           <button>
             <i class="fa fa-chevron-left"></i>&nbsp;ANTERIOR
           </button>
