--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
             </div>
 
             <div class="index-galleries-section">
-                <a class="index-galleries-section-link" href="galeria/geometria.html">
-                    <div class="index-galleries-section-image" style="background-image: url('assets/thumbnail/geometria/DSCF0415-HDR.webp')">
+                <a class="index-galleries-section-link" href="galeria/geometrica.html">
+                    <div class="index-galleries-section-image" style="background-image: url('assets/thumbnail/geometrica/DSCF0415-HDR.webp')">
                     </div>
                     <p class="index-galleries-section-text no-select">
-                        Geometría
+                        Geométrica
                     </p>
                 </a>
             </div>
