--- a/galeria/bodegones.html
+++ b/galeria/bodegones.html
@@ -112,8 +112,8 @@
         </a>
       </p>
       <p class="title-navigation-link">
-        <a href="geometria.html" target="_self">
-          Geometría
+        <a href="geometrica.html" target="_self">
+          Geométrica
         </a>
       </p>
       <p class="title-navigation-link">
