--- a/galeria/texturas.html
+++ b/galeria/texturas.html
@@ -112,8 +112,8 @@
         Texturas
       </p>
       <p class="title-navigation-link">
-        <a href="geometria.html" target="_self">
-          Geometría
+        <a href="geometrica.html" target="_self">
+          Geométrica
         </a>
       </p>
       <p class="title-navigation-link">
@@ -241,7 +241,7 @@
           </button>
         </a>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
-        <a href="geometria.html" target="_self">
+        <a href="geometrica.html" target="_self">
           <button>
             SIGUIENTE&nbsp;<i class="fa fa-chevron-right"></i>
           </button>
