Implemented contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -95,8 +95,7 @@
 
                     if (message.trim() !== '') {
                         var subject = 'Contacto vía El Arte de la Ruina';
-                        var mailtoLink = 'mailto:estevezmurado@gmail.com?subject=' + encodeURIComponent(subject) + '&body=' + encodeURIComponent(message);
-                        window.location.href = mailtoLink;
+                        window.location.href = 'mailto:estevezmurado@gmail.com?subject=' + encodeURIComponent(subject) + '&body=' + encodeURIComponent(message);
                     }
                 }
             </script>
